# rust-data-processing

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README_CRATE.md  README_DEV.md  SECURITY.md  benchmarks.ps1
.cargo/: audit.toml  config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  python_ci.yml  python_release.yml  rust_ci.yml  rust_release.yml
Planning/: CI_DEPLOY_POLICY.md  DOCUMENTATION.md  ENGINE_STRATEGY.md  How_TO_deploy.md  ISSUE_TRIAGE.md  PHASE1A_PLAN.md  PHASE1_PLAN.md  Phase2_plan.md  Post_README.md  REDUCE_AGG_SEMANTICS.md  RELEASE_CHECKLIST.md
benches/: ingestion.rs  map_reduce.rs  outliers.rs  pipelines.rs  profiling.rs  validation.rs
docs/: CI_DEPLOY_POLICY.md  DOCUMENTATION.md  ENGINE_STRATEGY.md  How_TO_deploy.md  RELEASE_CHECKLIST.md
docs/landing/: index.html
docs/python/: README.md
docs/rust/: README.md
python-wrapper/: .gitignore  API.md  Cargo.toml  PARITY.md  README.md  README_DEV.md  README_PYPI.md  pyproject.toml
python-wrapper/_pdoc_test/: rust_data_processing.html  search.js
python-wrapper/_pdoc_test/rust_data_processing/: cdc.html
python-wrapper/_pdoc_test2/: index.html  search.js
python-wrapper/_pdoc_test2/rust_data_processing/: examples.html
python-wrapper/_verify_pdoc/: index.html  rust_data_processing.html  search.js
python-wrapper/_verify_pdoc/rust_data_processing/: examples.html
python-wrapper/docs/: README.md
python-wrapper/rust_data_processing/: __init__.py  cdc.py  examples.py
python-wrapper/scripts/: README.md  Run-BenchmarkTests.ps1  Run-DeepTests.ps1  Run-UnitTests.ps1
python-wrapper/src/: convert.rs  lib.rs  observer_bridge.rs
python-wrapper/tests/: __init__.py  conftest.py  helpers.py  test_benchmarks.py  test_bindings.py  test_deep_parity.py  test_ingestion_fixtures.py  test_mapping_spec.py  test_observability_parity.py  test_partition_discovery.py  test_smoke.py  test_sql_parity.py  test_watermark_ingestion.py
scripts/: benchmarks.ps1  build_docs.ps1  install_sccache.ps1  release.py  release_tag.ps1  run_benchmarks.ps1  run_deep_tests.ps1  run_unit_tests.ps1
src/: error.rs  lib.rs  transform.rs  types.rs
src/cdc/: mod.rs
src/execution/: mod.rs  observer.rs  semaphore.rs
src/ingestion/: builder.rs  csv.rs  db.rs  excel.rs  json.rs  mod.rs  observability.rs  parquet.rs  partition.rs  polars_bridge.rs  unified.rs  watermark.rs
src/outliers/: mod.rs
src/pipeline/: mod.rs
src/processing/: filter.rs  map.rs  mod.rs  multi.rs  reduce.rs
src/profiling/: mod.rs
src/sql/: mod.rs
src/validation/: mod.rs
tests/: csv_ingestion.rs  deep_tests.rs  excel_ingestion.rs  ingestion_observability.rs  json_ingestion.rs  mapping_spec.rs  parquet_ingestion.rs  partition_discovery.rs  sql.rs  unified_ingestion.rs  watermark_incremental.rs
tests/fixtures/: people.csv  people.json  watermark_events.csv  watermark_events.json
tests/fixtures/deep/: SOURCES.md  job_runs_sample.json
tests/fixtures/hive_partitioned/: at_root.csv
tests/fixtures/hive_partitioned/dt=2024-01-01/region=eu/: events.csv
tests/fixtures/hive_partitioned/dt=2024-01-01/region=us/: events.csv
