[package]
name = "rust-data-processing"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
calamine = { version = "0.33.0" }
parquet = "57"
rayon = "1"
serde_json = "1.0.139"
thiserror = "2.0.11"
polars = { version = "0.53.0", features = ["lazy", "csv", "parquet", "json", "fmt"] }

[features]
# Backwards compatibility: Excel ingestion is enabled by default.
# (Previously this feature pulled in the optional `calamine` dependency.)
excel = []
# Enable Excel integration tests that generate an .xlsx at runtime
excel_test_writer = []
deep_tests = []
sql = []

[dev-dependencies]
criterion = "0.5"
rust_xlsxwriter = "0.93"

[[bench]]
name = "pipelines"
harness = false

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "map_reduce"
harness = false

# Reduce Windows/MSVC linker memory use for `cargo test`.
# (Integration tests can otherwise hit LNK1102 when linking large dependency graphs like Polars.)
[profile.test]
debug = 0
