[package]
name = "rust-data-processing"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
calamine = { version = "0.33.0", optional = true }
parquet = "57"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
serde_arrow = { version = "0.14.0", default-features = false, features = ["arrow-54"], optional = true }
thiserror = "2.0.11"
polars = { version = "0.53.0", features = ["lazy", "csv", "parquet", "json", "fmt"] }
polars-sql = { version = "0.53.0", optional = true }
rust_xlsxwriter = { version = "0.93", optional = true }
arrow = { version = "54", optional = true }
connectorx = { version = "0.4.5", default-features = false, features = ["dst_arrow", "fptr"], optional = true }

[features]
# Keep the default dependency surface small; enable connectors explicitly.
default = ["sql"]
# Enable Excel ingestion (adds `calamine`).
excel = ["dep:calamine"]
# Enable Excel integration tests / benchmarks that generate an `.xlsx` at runtime (adds `rust_xlsxwriter`).
excel_test_writer = ["excel", "dep:rust_xlsxwriter"]
deep_tests = []
sql = ["dep:polars-sql"]
arrow = ["dep:arrow"]
serde_arrow = ["arrow", "dep:serde_arrow"]
db_connectorx = [
  "arrow",
  "dep:connectorx",
  "connectorx/src_postgres",
  "connectorx/src_mysql",
  "connectorx/src_mssql",
  "connectorx/src_oracle",
]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pipelines"
harness = false

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "map_reduce"
harness = false

[[bench]]
name = "profiling"
harness = false

# Reduce Windows/MSVC linker memory use for `cargo test`.
# (Integration tests can otherwise hit LNK1102 when linking large dependency graphs like Polars.)
[profile.test]
debug = 0
