[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rust-data-processing"
version = "0.1.0"
description = "Python bindings for rust-data-processing: schema-first CSV/JSON/Parquet/Excel ingestion into an in-memory DataSet."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "rust-data-processing contributors" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Repository = "https://github.com/vihangdesai2018-png/rust-data-processing"

[dependency-groups]
dev = [
    "maturin>=1.7,<2",
    "pytest>=8",
    "pytest-benchmark>=4",
    "pyarrow>=15",
]

[tool.pytest.ini_options]
markers = [
    "deep: uses repo tests/fixtures/deep (slower)",
    "benchmark: pytest-benchmark timing (adds iterations; use -m 'not benchmark' to skip)",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.maturin]
module-name = "rust_data_processing._rust_data_processing"
python-source = "."
# Optional wheel builds with DB: set `features = ["db"]` here or pass `maturin build --features db`.
# Optional abi3 (stable Python ABI): enable PyO3 `abi3-py310` (or similar) in Cargo.toml and set
# `py-limited-api = true` here — fewer wheels, stricter PyO3 API limits. See How_TO_deploy.md.
